# ClubSite/ClientApp/src/nav/requests.ts
@@ -1,7 +1,7 @@
 import * as request from "superagent";
 import { Asset } from "../util/types";
 
-const url = 'api/random/hello'
+const url = 'api/asset/nav'
 
 export function getNavImg() : Promise<Asset> {
   return request
