# ClubSite/wwwroot/docs/api-specification.json
@@ -6,6 +6,27 @@
     "version": "1.0.0"
   },
   "paths": {
+    "/api/Asset/Nav": {
+      "get": {
+        "tags": [
+          "Asset"
+        ],
+        "operationId": "Asset_Nav",
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/auth/Login": {
       "post": {
         "tags": [
